# alpha-swarm-dashboard

./: .dockerignore  .env.example  .gitignore  Bad_Date_Audit_Report.txt  DEPLOYMENT.md  FINAL_LLM_PROMPT.txt  FINAL_QUANT_PROMPT.txt  Governance_Report.txt  Portfolio_Total_RealTime_Brief_2026-01-28.xlsx  README.md  README_OPERATOR.md  REFACTOR_SUMMARY.md  USER_GUIDE.md  ^GSPC.csv  app.py  audit_bad_dates_v2.py  audit_data_full.csv  benchmark.py  benchmark2.py  calculations.py  chart_generator_v2.py  chart_generator_v3.py  chart_generator_v6.py  check_contrast.py  governance_backtester.py  governance_backtester_v3_safe.py  governance_history.csv  governance_history_v2.csv  logic.py  pyproject.toml  requirements.txt  run.bat  run.sh  styles.py  test_app.py  test_perf.py  test_perf2.py  test_perf3.py  test_perf4.py  update.csv  (+2 more)
.Jules/: palette.md
.streamlit/: config.toml
assets/: sector_map.json
docs/: Bad_Date_Audit_Final.txt  USER_GUIDE.md  VIX_Threshold_Analysis.md  governance_status.txt
research/: employment_data_prep.py
src/: analyze_vix_threshold.py  app.py  audit_sectors.py  verify_context_dev.py
tests/: test_analyze_vix.py  test_analyze_vix_threshold.py  test_app.py  test_audit_sectors.py  test_calculations.py  test_employment_data.py  test_forecast.py  test_logic.py  test_security_fix.py  test_security_vuln.py  test_sparkline.py  test_ssrf_vuln.py  test_strategist_update.py  test_styles.py  test_styles_a11y.py  test_styles_traversal.py  test_styles_ux.py  test_ui_security.py
verification/: verify_accessibility_changes.py  verify_refactor.py  (+3 more)
(+18 files in other folders)
